# zoomcamp-google-fit-data

./: .gitignore  Dockerfile  README.md  docker-compose.yml  ingest.py  load_to_databricks.py  main.py  pyproject.toml
airflow/: docker-compose.yaml
airflow/config/: airflow.cfg
airflow/dags/: google_fit_pipeline.py
dbt_googlefit/: .user.yml  dbt_project.yml  profiles.yml
dbt_googlefit/models/mart/: mart_googlefit.sql  mart_googlefit.yml
dbt_googlefit/models/staging/: sources.yml  stg_googlefit.sql  stg_googlefit.yml
streamlit_googlefit/: app.py
